contrast fix, readability, img folder, semantics, contact&about pages finished

--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,8 @@ ul li a {
     text-align: center;
     padding: 14px 55px;
     text-decoration: none;
-    border: 2px solid black;
-    background-color: rgb(161, 206, 255);
+    border: 2px solid #222;
+    background-color: rgb(81, 146, 224);
     margin-top: 45px;
 
     border-radius: 5px;
@@ -45,7 +45,7 @@ ul li a:hover {
 
 h1 {
     text-align: center;
-    color: #333;
+    color: #222;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -173,8 +173,8 @@ h1 {
 .company-text p {
     font-size: 1rem;
     line-height: 1.6;
-    color: black;
-    text-align: left;
+    color: #222;
+    text-align: center;
 }
 
 .testimony-row {
@@ -190,7 +190,7 @@ h1 {
     border-radius: 8px;
     width: 48%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: left;
+    text-align: center;
     display: block;
     box-sizing: border-box;
 }
@@ -198,7 +198,7 @@ h1 {
 .testimony-box p {
     margin-bottom: 10px;
     font-size: 1rem;
-    color: black;
+    color: #222;
 }
 
 .testimony-box strong {
@@ -220,6 +220,7 @@ footer {
 }
 
 footer .footer-text {
+    color: #222;
     flex: 1;
     justify-content: center;
     align-items: center;
@@ -268,12 +269,13 @@ footer .footer-icons {
     box-shadow:0 8px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     box-sizing: flex;
+    text-align: center;
 }
 
 .title-box {
     margin: 20px auto;
     text-align: center;
-    background-color: rgb(161, 206, 255);
+    background-color: rgb(81,146,224);
     width: 100%;
 }
 
@@ -299,13 +301,13 @@ footer .footer-icons {
 }
 
 .contact-us-column strong {
-    color: #333;
+    color: #222;
 }
 
 h4 {
     font-size: 2rem;
     text-align: center;
-    color: #333;
+    color: #222;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -372,7 +374,7 @@ h4 {
         text-align: center;
     }
 
-    .header img {
+.header img {
         width: 70px;
         height: auto;
         margin-bottom: 10px;
@@ -385,13 +387,18 @@ h4 {
 
     /* navbar */
     ul {
+  
         flex-direction: column;
         align-items: center;
-        margin: 10px 10px;
-        gap: 2px;
+        display: flex;
+        gap: 0;
+    
     }
 
+
+    
     ul li a {
+        
         width: 100px;
         max-width: 300px;
         padding: 12px 15px;
